--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   filter: invert(0);
 }
 
+button {
+  cursor: pointer;
+}
+
 input[type="date"] {
   color: black;
   background-color: white;
