--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,12 @@
 @import "tailwindcss";
 
-@plugin "daisyui";
+/* @plugin "daisyui"; */
 
 @plugin "daisyui" {
   include: button, input, select, checkbox, radio, label, textarea;
 }
 
-@plugin "daisyui/theme" {
+/* @plugin "daisyui/theme" {
   name: "mytheme";
   default: true;
 
@@ -30,7 +30,7 @@
   --color-graybg: #eeeeee;
   --color-blackbg: #1e1e1e;
   --color-yellow: #fea01c;
-}
+} */
 
 * {
   font-size: 13px;
