--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,9 @@
   --color-primary: #389df1;
   --color-secondary: #fea01c;
   --color-info: #93c5fd;
+  --color-base-100: #f0f5f1;
+  --color-base-200: #e3e6e4;
+  --color-base-300: #c9c9c9;
 }
 
 @plugin "daisyui/theme" {
@@ -23,6 +26,9 @@
   --color-primary: #1d4ed8;
   --color-secondary: #a16207;
   --color-info: #3b82f6;
+  --color-base-100: #303030;
+  --color-base-200: #1c1c1c;
+  --color-base-300: #050505;
 }
 
 @plugin "daisyui/theme" {
