--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,8 +15,8 @@
   --color-primary: #389df1;
   --color-secondary: #fea01c;
   --color-info: #93c5fd;
-  --color-warning: #cf2525;
-  --color-error: #f2d411;
+  --color-warning: #f2d411;
+  --color-error: #ed4747;
   --color-base-100: #f0f5f1;
   --color-base-200: #e3e6e4;
   --color-base-300: #c9c9c9;
@@ -28,8 +28,8 @@
   --color-primary: #1d4ed8;
   --color-secondary: #a16207;
   --color-info: #3b82f6;
-  --color-warning: #940a0a;
-  --color-error: #b59f12;
+  --color-warning: #b59f12;
+  --color-error: #e33636;
   --color-base-100: #121010;
   --color-base-200: #1c1c1c;
   --color-base-300: #050505;
