--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,9 +17,9 @@
   --color-info: #93c5fd;
   --color-warning: #f2d411;
   --color-error: #ed4747;
-  --color-base-100: #f0f5f1;
-  --color-base-200: #e3e6e4;
-  --color-base-300: #c9c9c9;
+  --color-base-100: #ffffff;
+  --color-base-200: #f3f4f6;
+  --color-base-300: #e5e7eb;
   --color-text: #000000;
   --color-accent: #eb31bc;
 }
@@ -32,9 +32,9 @@
   --color-info: #3b82f6;
   --color-warning: #b59f12;
   --color-error: #e33636;
-  --color-base-100: #121010;
-  --color-base-200: #1c1c1c;
-  --color-base-300: #050505;
+  --color-base-100: #121212;
+  --color-base-200: #1e1e1e;
+  --color-base-300: #2c2c2c;
   --color-text: #ffffff;
   --color-accent: #a61b60;
 }
@@ -144,6 +144,10 @@ html {
 
 body {
   scroll-behavior: smooth;
+  color: #000000;
+  background-color: #f0f5f1;
+  color: var(--color-text);
+  background-color: var(--color-base-100);
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
